fixup! Release build. Used technologies: Bootstrap v4 alpha 6 Showdown Markdown parser: https://github.com/showdownjs/showdown To markdown HTML parser: https://github.com/domchristie/to-markdown FontAwesome: http://fontawesome.io/ Fira Mono woff2: https://github.com/mozilla/Fira/tree/master/woff2 Open Sans woff2: https://github.com/FontFaceKit/open-sans Some tutorials from W3Schools atumanov CSS and JQuery scripts Material Floating button: https://codepad.co/snippet/0PNF4OPp The Almighty StackOverflow

--- a/css/starter-template.css
+++ b/css/starter-template.css
@@ -254,15 +254,15 @@ body {
     margin: 30px auto;
 }
 
-a:visited {
+.nd a:visited {
     color: white;
 }
 
-a:hover {
+.nds a:hover {
     color: white;
 }
 
-a:active {
+.nds a:active {
     color: white;
 }
 
